recode, split files

--- a/backend/test/test.html
+++ b/backend/test/test.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Input FileUpload files Property</title>
+    <a href="http://localhost:3000/user/auth/google">abc</a>
 </head>
+
 <body>
-    <h1>Vai ca lon luon</h1>
-    <h1>Cho bo may cai di chi</h1>
+    <script>
+        const cloundName = "ddpr8licr";
+        const uploadName = "ydam5qfj";
+        // fetch(`http://localhost:3000/user/auth/google`, {
+        //     method: "GET",
+
+        // })
+        //     .then((res) => res.json())
+        //     .then((post) => {
+        //         document.getElementById("data").innerHTML += data;
+        //     })
+        //     .catch((err) => alert(err));
+    </script>
 </body>
+
 </html>
